# mcs_solver_cuda

./: .gitignore  CMakeLists.txt  README.md  build_release.sh
data/: solver_trans_inter_2ac.txt  solver_trans_intra_2ac.txt
src/: CMakeLists.txt
src/cuda_ransac/: CMakeLists.txt
src/cuda_ransac/app/: CMakeLists.txt  test_gpu.cpp  test_solver_trans_inter_2ac.cpp  test_solver_trans_intra_2ac.cpp
src/cuda_ransac/include/: common_cuda.h  evd_cuda.h  qr_cuda.h  solver_trans_inter_2ac.h  solver_trans_intra_2ac.h  svd_cuda.h  utils_cuda.h
src/cuda_ransac/src/: common_cuda.cu  evd_cuda.cu  qr_cuda.cu  solver_trans_inter_2ac.cu  solver_trans_inter_2ac.cut  solver_trans_intra_2ac.cu  svd_cuda.cu  utils_cuda.cu
src/cuda_ransac/tmp/: evd_cuda.cu  evd_cuda.h
src/raw/: CMakeLists.txt
src/raw/include/: common.h  solver_trans_generic_2ac_core_48.h  solver_trans_generic_2ac_core_64.h  solver_trans_inter_2ac_core_48.h  solver_trans_inter_2ac_core_56.h  solver_trans_intra_2ac_core_48.h  tic_toc.h  util.h
src/raw/include/tmp/: common.h  matrix_cuda.h  solver_trans_case5_2ac_core_48.h  solver_trans_case5_2ac_core_64.h  solver_trans_inter_2ac_core_56.h  solver_trans_intra_2ac_core_48.h  util.h
src/raw/src/: solver_trans_inter_2ac.cpp  solver_trans_intra_2ac.cpp
src/raw/src/tmp/: solver_trans_inter_2ac.cpp  solver_trans_intra_2ac.cpp
